--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 </head>
 <body>
+  
     <header>
         <div class="navegacion">
         <nav class="navbar bg-light p-3" data-bs-theme="bg-light">
@@ -42,13 +43,73 @@
             </nav>
     </header>
     <main>
-       <div class="jumbotron">
-        <h1>Registrate</h1>
-        <h2>ingresa</h2>
-       </div>
-
+        <div class="jumbotron">
+          <h1>Tú lo imaginas, nosotros lo hacemos realidad!</h1>
+          <div class="boton">
+            <input class="email" type="text">
+            <button type="button" class="registro">Registrate</button>
+        </div>
     </main>
+    <section class="cards1">
+      <div class="row row-cols-1 row-cols-md-3 g-4">
+        <div class="col">
+          <div class="card">
+            <img src="./assets/images/jack2.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Jack Skellington</h5>
+              <p class="card-text">Espeluznante disfraz de "El extraño mundo de Jack" <br> Disponible para niños y adultos.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="./assets/images/merlina2.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Merlina</h5>
+              <p class="card-text">Disfraz de La familia Adams, tallas de 4-10 años. <br> Disponible para adulto.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="./assets/images/kart2.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Mario Kart</h5>
+              <p class="card-text">Vive los videojuegos al máximo con este disfraz de Mario Kart. 
+                <br> Tallas de 4-10 años.
+                 Disponible para adulto.</p>
+            </div>
+          </div>
+        </div>
+        </div>
+      </div>
+    </section>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+      <footer class="fot">
+
+        <article class="caja caja1"> 
+          <h4>Servicios</h4>
+          <br>
+          <h5>Pedidos <br>Agendar cita</h5>
+        </article>
+
+        <article class="caja caja2">
+          <h4>Contacto</h4>
+          <br>
+          <h5>Facebook <br> Instagram <br> WhatsApp</h5>
+        </article>
+
+        <article class="caja caja3">
+          <h4>Brand</h4>
+          <br>
+          <h5>Reseñas</h5>
+
+        </article>
+      </footer>
+  <script 
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" 
+    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" 
+    crossorigin="anonymous">
+  </script>
 </body>
 </html>
