--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
     <main>
         <div class="jumbotron">
           <h1>Tú lo imaginas, nosotros lo hacemos realidad!</h1>
+          <p>Confeccionamos disfraces de alta calidad 100% personalizados. <br> Sé el mas cool de la fiesta y gana todos los concursos, con nuestros <br> disfraces.</p>
           <div class="boton">
             <input class="email" type="text">
             <button type="button" class="registro">Registrate</button>
